# Project_AIAgent

./: .gitignore
Storage/: package-lock.json  package.json  store.js
app/: app.py  fetch.py
src/services/myService/myService/: Cargo.toml
src/services/myService/myService/src/: main.rs
