[package]
name = "myService"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "myService"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = "0.14.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
marine-rs-sdk-test = "0.16.1"